--- a/src/components/mobile-cards/mobile-cards-styles.module.scss
+++ b/src/components/mobile-cards/mobile-cards-styles.module.scss
@@ -14,7 +14,7 @@
 
    @media #{$mobile-landscape} {
       bottom: 5svh;
-      height: 68%;
+      height: 68svh;
       right: 4%;
       left: auto;
       width: 45vw;
